--- a/app/src/main/res/layout/heroes.xml
+++ b/app/src/main/res/layout/heroes.xml
@@ -3,13 +3,22 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
     <TextView
             android:id="@+id/result_tv"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="TextView"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:textSize="28sp"/>
 
+    <TextView
+            android:id="@+id/update_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Update"
+            android:textStyle="bold"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 </LinearLayout>
